; ModuleID = '/home/carl/AnghaBench/reactos/base/services/tcpsvcs/extr_log.c_OpenLogFile.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/tcpsvcs/extr_log.c_OpenLogFile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@szLogFileName = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@FILE_SHARE_READ = common dso_local global i32 0, align 4
@OPEN_ALWAYS = common dso_local global i32 0, align 4
@FILE_ATTRIBUTE_NORMAL = common dso_local global i32 0, align 4
@FILE_FLAG_OVERLAPPED = common dso_local global i32 0, align 4
@hLogFile = common dso_local global i32* null, align 8
@INVALID_HANDLE_VALUE = common dso_local global i32* null, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @OpenLogFile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @OpenLogFile() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @szLogFileName, align 4
  %3 = load i32, i32* @GENERIC_WRITE, align 4
  %4 = load i32, i32* @FILE_SHARE_READ, align 4
  %5 = load i32, i32* @OPEN_ALWAYS, align 4
  %6 = load i32, i32* @FILE_ATTRIBUTE_NORMAL, align 4
  %7 = load i32, i32* @FILE_FLAG_OVERLAPPED, align 4
  %8 = or i32 %6, %7
  %9 = call i32* @CreateFileW(i32 %2, i32 %3, i32 %4, i32* null, i32 %5, i32 %8, i32* null)
  store i32* %9, i32** @hLogFile, align 8
  %10 = load i32*, i32** @hLogFile, align 8
  %11 = load i32*, i32** @INVALID_HANDLE_VALUE, align 8
  %12 = icmp eq i32* %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %0
  store i32* null, i32** @hLogFile, align 8
  %14 = load i32, i32* @FALSE, align 4
  store i32 %14, i32* %1, align 4
  br label %17

15:                                               ; preds = %0
  %16 = load i32, i32* @TRUE, align 4
  store i32 %16, i32* %1, align 4
  br label %17

17:                                               ; preds = %15, %13
  %18 = load i32, i32* %1, align 4
  ret i32 %18
}

declare dso_local i32* @CreateFileW(i32, i32, i32, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
